; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_socket.c_socket_adjust_frame_parameters.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_socket.c_socket_adjust_frame_parameters.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.frame = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @socket_adjust_frame_parameters(%struct.frame* %0, i32 %1) #0 {
  %3 = alloca %struct.frame*, align 8
  %4 = alloca i32, align 4
  store %struct.frame* %0, %struct.frame** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = call i64 @link_socket_proto_connection_oriented(i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load %struct.frame*, %struct.frame** %3, align 8
  %10 = call i32 @frame_add_to_extra_frame(%struct.frame* %9, i32 4)
  br label %11

11:                                               ; preds = %8, %2
  ret void
}

declare dso_local i64 @link_socket_proto_connection_oriented(i32) #1

declare dso_local i32 @frame_add_to_extra_frame(%struct.frame*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
